Custom--app/main/default/objects/Listing__c/Listing__c.object-meta.xml
<CustomObject>
    <description>This is part of the Leasing/Marketing deployment.  Tracks all key details and workflow related to homes on the market.  There are Triggers between Listing and Application Tracking that update Status fields on both records.  Use SkipTriggersForUser when doing any data updates to Listing or Application Tracking.</description>
    <label>Listing</label>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>