Custom--app/main/default/objects/Listing__c/fields/Actual_AppTrack__c.field-meta.xml
<CustomField>
    <fullName>Actual_AppTrack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will automatically populate the most current Application Tracking record associated with this listing.</inlineHelpText>
    <label>Application Tracking Record</label>
    <referenceTo>Tenant_App__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>