Custom--app/main/default/objects/Listing__c/fields/Actual_Move_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Move_in_Date__c</fullName>
    <formula>(Actual_AppTrack__r.Actual_Move_in_Date__c)</formula>
    <inlineHelpText>This is a formula field that reflects the Actual Move-in Date from the Primary Applicant Tracking record associated with this Listing.</inlineHelpText>
    <label>Actual Move-In Date</label>
    <type>Date</type>
</CustomField>