Custom--app/main/default/objects/Listing__c/fields/Actual_Move_in_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Actual_Move_in_Date_Text__c</fullName>
    <label>Actual Move-in Date_Text</label>
    <type>Date</type>
</CustomField>