Custom--app/main/default/objects/Listing__c/fields/Actual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rent__c</fullName>
    <formula>IF(ISBLANK(Resulting_Lease__c), IF(NOT(ISBLANK(Actual_AppTrack__c)), Market_Rent__c,  Actual_Rent_Historical__c ), Resulting_Lease_Total_Rent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>