Custom--app/main/default/objects/Listing__c/fields/Actual_Rent_Historical__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rent_Historical__c</fullName>
    <label>Actual Rent Historical</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>