Custom--app/main/default/objects/Listing__c/fields/Actual_Rent_v_Previous_Rent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rent_v_Previous_Rent__c</fullName>
    <formula>IF(Previous_Total_Rent__c > 0 , Actual_Rent__c/Previous_Total_Rent__c-1 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Rent v Previous Rent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>