Custom--app/main/default/objects/Listing__c/fields/Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Address_Text__c</fullName>
    <description>This is a copy of the Address field to be used for search</description>
    <label>SearchText- Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>