Custom--app/main/default/objects/Listing__c/fields/Admin_Fee_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_if_applicable__c</fullName>
    <inlineHelpText>For markets that charge an admin fee, please include that here.  All other market should leave this field blank.</inlineHelpText>
    <label>Admin Fee (if applicable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>