Custom--app/main/default/objects/Listing__c/fields/Adverse_Market_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Market_Conditions__c</fullName>
    <label>Adverse Market Conditions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>