Custom--app/main/default/objects/Listing__c/fields/Agent_Aged_Inventory_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Aged_Inventory_Assessment_Date__c</fullName>
    <label>Agent Aged Inventory Assessment Date</label>
    <type>Date</type>
</CustomField>