Custom--app/main/default/objects/Listing__c/fields/Agent_Initial_PreMarketing_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Agent_Initial_PreMarketing_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Initial-PreMarketing Feedback</label>
    <type>Checkbox</type>
</CustomField>