Custom--app/main/default/objects/Listing__c/fields/Agent_Initial_PreMarketing_Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Initial_PreMarketing_Feedback_Date__c</fullName>
    <label>Agent Initial-PreMarketing Feedback Date</label>
    <type>DateTime</type>
</CustomField>