Custom--app/main/default/objects/Listing__c/fields/Agent_Inventory_Comments__c.field-meta.xml
<CustomField>
    <fullName>Agent_Inventory_Comments__c</fullName>
    <label>Agent Aged Inventory Assessment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>