Custom--app/main/default/objects/Listing__c/fields/Agent_Rent_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Rent_Date__c</fullName>
    <description>Agent Rent Date will updated to TODAY when Agent Rent Opinion changes ,</description>
    <label>Agent Rent Opinion Date</label>
    <type>Date</type>
</CustomField>