Custom--app/main/default/objects/Listing__c/fields/Agent_Rent_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Agent_Rent_Opinion__c</fullName>
    <inlineHelpText>This is the proposed rent amount according to the opinion of the Agent.</inlineHelpText>
    <label>Agent Rent Opinion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>