Custom--app/main/default/objects/Listing__c/fields/AgentCommentRent__c.field-meta.xml
<CustomField>
    <fullName>AgentCommentRent__c</fullName>
    <label>Agent Initial-Premarketing Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>