Custom--app/main/default/objects/Listing__c/fields/AgentInitialFeedbackDate__c.field-meta.xml
<CustomField>
    <fullName>AgentInitialFeedbackDate__c</fullName>
    <label>Agent Initial-Premarketing Comments Date</label>
    <type>Date</type>
</CustomField>