Custom--app/main/default/objects/Listing__c/fields/AgentRentReadyOTMComments__c.field-meta.xml
<CustomField>
    <fullName>AgentRentReadyOTMComments__c</fullName>
    <label>Agent Rent Ready-OTM Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>