Custom--app/main/default/objects/Listing__c/fields/AgentRentReadyOTMCommentsDate__c.field-meta.xml
<CustomField>
    <fullName>AgentRentReadyOTMCommentsDate__c</fullName>
    <label>Agent Rent Ready-OTM Comments Date</label>
    <type>Date</type>
</CustomField>