Custom--app/main/default/objects/Listing__c/fields/Alert_Locksmith__c.field-meta.xml
<CustomField>
    <fullName>Alert_Locksmith__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Locksmith</label>
    <type>Checkbox</type>
</CustomField>