Custom--app/main/default/objects/Listing__c/fields/Alert_Locksmith_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Alert_Locksmith_Date_Time__c</fullName>
    <label>Alert Locksmith Date/Time</label>
    <type>DateTime</type>
</CustomField>