Custom--app/main/default/objects/Listing__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>