Custom--app/main/default/objects/Listing__c/fields/Amenities_Detail__c.field-meta.xml
<CustomField>
    <fullName>Amenities_Detail__c</fullName>
    <label>Amenities Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>