Custom--app/main/default/objects/Listing__c/fields/Amenities_Included__c.field-meta.xml
<CustomField>
    <fullName>Amenities_Included__c</fullName>
    <label>Amenities Included?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>