Custom--app/main/default/objects/Listing__c/fields/App_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>App_Received_Date__c</fullName>
    <formula>Actual_AppTrack__r.App_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Received</label>
    <type>Date</type>
</CustomField>