Custom--app/main/default/objects/Listing__c/fields/Apps_Primary_Last_10_Days__c.field-meta.xml
<CustomField>
    <fullName>Apps_Primary_Last_10_Days__c</fullName>
    <label># Apps (Primary) Last 10 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>