Custom--app/main/default/objects/Listing__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <formula>Portfolio__r.Property_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Number</label>
    <type>Text</type>
</CustomField>