Custom--app/main/default/objects/Listing__c/fields/Bath__c.field-meta.xml
<CustomField>
    <fullName>Bath__c</fullName>
    <formula>Text(Residence__r.Baths__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bath</label>
    <type>Text</type>
</CustomField>