Custom--app/main/default/objects/Listing__c/fields/Bedroom__c.field-meta.xml
<CustomField>
    <fullName>Bedroom__c</fullName>
    <formula>Text(Residence__r.Bedrooms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bedroom</label>
    <type>Text</type>
</CustomField>