Custom--app/main/default/objects/Listing__c/fields/Boom_Text__c.field-meta.xml
<CustomField>
    <fullName>Boom_Text__c</fullName>
    <label>Rently Serial Number</label>
    <length>155</length>
    <type>Text</type>
</CustomField>