Custom--app/main/default/objects/Listing__c/fields/BR_BA__c.field-meta.xml
<CustomField>
    <fullName>BR_BA__c</fullName>
    <formula>Text(Residence__r.Bedrooms__c) &amp; " / " &amp; Text(Residence__r.Baths__c)</formula>
    <label>BR/BA</label>
    <type>Text</type>
</CustomField>