Custom--app/main/default/objects/Listing__c/fields/BT_Rider_Deliver_Date__c.field-meta.xml
<CustomField>
    <fullName>BT_Rider_Deliver_Date__c</fullName>
    <label>Rently RENT Café Website Update</label>
    <type>Date</type>
</CustomField>