Custom--app/main/default/objects/Listing__c/fields/BT_Rider_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>BT_Rider_Order_Date__c</fullName>
    <label>Rently Installed Date</label>
    <type>Date</type>
</CustomField>