Custom--app/main/default/objects/Listing__c/fields/BT_Rider_Provided_to_Agent_Date__c.field-meta.xml
<CustomField>
    <fullName>BT_Rider_Provided_to_Agent_Date__c</fullName>
    <label>Rently Website Update</label>
    <type>Date</type>
</CustomField>