Custom--app/main/default/objects/Listing__c/fields/Bulk_CMA_Decision_Tree_Status__c.field-meta.xml
<CustomField>
    <fullName>Bulk_CMA_Decision_Tree_Status__c</fullName>
    <label>Bulk CMA Decision Tree Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(10%) AVM vs CMA</fullName>
            </value>
            <value>
                <fullName>(10%) AVM vs PL</fullName>
            </value>
            <value>
                <fullName>(10%) CMA vs AVM</fullName>
            </value>
            <value>
                <fullName>(10%) CMA vs PL</fullName>
            </value>
            <value>
                <fullName>(5%) AVM vs CMA</fullName>
            </value>
            <value>
                <fullName>(5%) AVM vs PL</fullName>
            </value>
            <value>
                <fullName>(5%) CMA vs AVM</fullName>
            </value>
            <value>
                <fullName>(5%) CMA vs PL</fullName>
            </value>
            <value>
                <fullName>EXCEPTION</fullName>
            </value>
            <value>
                <fullName>10% - AVM vs CMA</fullName>
                <isActive>false</isActive>
                <label>10% - AVM vs CMA</label>
            </value>
            <value>
                <fullName>10% - AVM vs PL</fullName>
                <isActive>false</isActive>
                <label>10% - AVM vs PL</label>
            </value>
            <value>
                <fullName>10% - CMA vs PL</fullName>
                <isActive>false</isActive>
                <label>10% - CMA vs PL</label>
            </value>
            <value>
                <fullName>5% - CMA vs PL</fullName>
                <isActive>false</isActive>
                <label>5% - CMA vs PL</label>
            </value>
            <value>
                <fullName>5% AVM vs CMA</fullName>
                <isActive>false</isActive>
                <label>5% AVM vs CMA</label>
            </value>
            <value>
                <fullName>5% AVM vs PL</fullName>
                <isActive>false</isActive>
                <label>5% AVM vs PL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>