Custom--app/main/default/objects/Listing__c/fields/Bulk_Post_Decision_CMA_Rent__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Post_Decision_CMA_Rent__c</fullName>
    <label>Bulk Post-Decision CMA Rent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>