Custom--app/main/default/objects/Listing__c/fields/Bulk_Rent_Alert__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Rent_Alert__c</fullName>
    <formula>if(((Market_Rent__c/(CMA_Rent__c * 1.02))-1)*100 > 10, 'YES','NO')</formula>
    <label>Bulk Rent Alert</label>
    <type>Text</type>
</CustomField>