Custom--app/main/default/objects/Listing__c/fields/Bulk_Subject_AVM_Rent__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Subject_AVM_Rent__c</fullName>
    <label>Bulk Subject AVM Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>