Custom--app/main/default/objects/Listing__c/fields/C1_Address__c.field-meta.xml
<CustomField>
    <fullName>C1_Address__c</fullName>
    <label>C1 Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>