Custom--app/main/default/objects/Listing__c/fields/C1_BA__c.field-meta.xml
<CustomField>
    <fullName>C1_BA__c</fullName>
    <label>C1 BA</label>
    <length>4</length>
    <type>Text</type>
</CustomField>