Custom--app/main/default/objects/Listing__c/fields/C1_Distance__c.field-meta.xml
<CustomField>
    <fullName>C1_Distance__c</fullName>
    <label>C1 Distance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>