Custom--app/main/default/objects/Listing__c/fields/C1_DOM__c.field-meta.xml
<CustomField>
    <fullName>C1_DOM__c</fullName>
    <label>C1 DOM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>