Custom--app/main/default/objects/Listing__c/fields/C1_List_Date__c.field-meta.xml
<CustomField>
    <fullName>C1_List_Date__c</fullName>
    <label>C1 List Date</label>
    <type>Date</type>
</CustomField>