Custom--app/main/default/objects/Listing__c/fields/C1_State__c.field-meta.xml
<CustomField>
    <fullName>C1_State__c</fullName>
    <label>C1 State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>