Custom--app/main/default/objects/Listing__c/fields/C1_Unadjusted_PSF_Rate__c.field-meta.xml
<CustomField>
    <fullName>C1_Unadjusted_PSF_Rate__c</fullName>
    <label>C1 Unadjusted PSF Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>