Custom--app/main/default/objects/Listing__c/fields/C2_Distance__c.field-meta.xml
<CustomField>
    <fullName>C2_Distance__c</fullName>
    <label>C2 Distance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>