Custom--app/main/default/objects/Listing__c/fields/C2_DOM__c.field-meta.xml
<CustomField>
    <fullName>C2_DOM__c</fullName>
    <label>C2 DOM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>