Custom--app/main/default/objects/Listing__c/fields/C2_List_Date__c.field-meta.xml
<CustomField>
    <fullName>C2_List_Date__c</fullName>
    <label>C2 List Date</label>
    <type>Date</type>
</CustomField>