Custom--app/main/default/objects/Listing__c/fields/C2_Zip__c.field-meta.xml
<CustomField>
    <fullName>C2_Zip__c</fullName>
    <label>C2 Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>