Custom--app/main/default/objects/Listing__c/fields/C3_BR__c.field-meta.xml
<CustomField>
    <fullName>C3_BR__c</fullName>
    <label>C3 BR</label>
    <length>4</length>
    <type>Text</type>
</CustomField>