Custom--app/main/default/objects/Listing__c/fields/C3_DOM__c.field-meta.xml
<CustomField>
    <fullName>C3_DOM__c</fullName>
    <label>C3 DOM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>