Custom--app/main/default/objects/Listing__c/fields/C3_List_Date__c.field-meta.xml
<CustomField>
    <fullName>C3_List_Date__c</fullName>
    <label>C3 List Date</label>
    <type>Date</type>
</CustomField>