Custom--app/main/default/objects/Listing__c/fields/C3_Price__c.field-meta.xml
<CustomField>
    <fullName>C3_Price__c</fullName>
    <label>C3 Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>