Custom--app/main/default/objects/Listing__c/fields/C3_SQFT__c.field-meta.xml
<CustomField>
    <fullName>C3_SQFT__c</fullName>
    <label>C3 SQFT</label>
    <length>5</length>
    <type>Text</type>
</CustomField>