Custom--app/main/default/objects/Listing__c/fields/C4_Address__c.field-meta.xml
<CustomField>
    <fullName>C4_Address__c</fullName>
    <label>C4 Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>