Custom--app/main/default/objects/Listing__c/fields/C4_Adjusted_PSF_Rate__c.field-meta.xml
<CustomField>
    <fullName>C4_Adjusted_PSF_Rate__c</fullName>
    <label>C4 Adjusted PSF Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>