Custom--app/main/default/objects/Listing__c/fields/C4_Circuit_Breaker_s_Trigger__c.field-meta.xml
<CustomField>
    <fullName>C4_Circuit_Breaker_s_Trigger__c</fullName>
    <label>C4 Circuit Breaker(s) Trigger</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQFT</fullName>
            </value>
            <value>
                <fullName>BATH</fullName>
            </value>
            <value>
                <fullName>BEDROOMS</fullName>
            </value>
            <value>
                <fullName>RADIUS</fullName>
            </value>
            <value>
                <fullName>LIST DATE</fullName>
            </value>
            <value>
                <fullName>DOM</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>