Custom--app/main/default/objects/Listing__c/fields/C4_Selected_Not_Selected__c.field-meta.xml
<CustomField>
    <fullName>C4_Selected_Not_Selected__c</fullName>
    <label>C4 Selected/Not Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>