Custom--app/main/default/objects/Listing__c/fields/City_Text__c.field-meta.xml
<CustomField>
    <fullName>City_Text__c</fullName>
    <description>This is a copy of the City field to enable search.</description>
    <label>Search Text - City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>