Custom--app/main/default/objects/Listing__c/fields/Cleanliness_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_Exterior__c</fullName>
    <label>Cleanliness (Exterior)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>