Custom--app/main/default/objects/Listing__c/fields/Cleanliness_Interior__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_Interior__c</fullName>
    <label>Cleanliness (Interior)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>