Custom--app/main/default/objects/Listing__c/fields/CMA_Comments__c.field-meta.xml
<CustomField>
    <fullName>CMA_Comments__c</fullName>
    <label>CMA Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>