Custom--app/main/default/objects/Listing__c/fields/CMA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CMA_Received_Date__c</fullName>
    <label>CMA Date (Most Recent)</label>
    <type>Date</type>
</CustomField>