Custom--app/main/default/objects/Listing__c/fields/CMA_Rent__c.field-meta.xml
<CustomField>
    <fullName>CMA_Rent__c</fullName>
    <inlineHelpText>This should reflect the most recent CMA.</inlineHelpText>
    <label>CMA Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>