Custom--app/main/default/objects/Listing__c/fields/Coming_Soon_Listing_Prepared__c.field-meta.xml
<CustomField>
    <fullName>Coming_Soon_Listing_Prepared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coming Soon Listing Prepared</label>
    <type>Checkbox</type>
</CustomField>