Custom--app/main/default/objects/Listing__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <label>Company Website?</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>