Custom--app/main/default/objects/Listing__c/fields/Compare_Lease__c.field-meta.xml
<CustomField>
    <fullName>Compare_Lease__c</fullName>
    <formula>Resulting_Lease__c == Previous_Lease__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare Lease</label>
    <type>Checkbox</type>
</CustomField>