Custom--app/main/default/objects/Listing__c/fields/Competitor_Concessions__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Concessions__c</fullName>
    <label>Competitor Concessions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Concessions</fullName>
            </value>
            <value>
                <fullName>&lt;$500</fullName>
            </value>
            <value>
                <fullName>$500-$1000</fullName>
            </value>
            <value>
                <fullName>First Months Rent</fullName>
            </value>
            <value>
                <fullName>Other Concessions</fullName>
            </value>
            <value>
                <fullName>Not Able to Determine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>