Custom--app/main/default/objects/Listing__c/fields/Competitor_Presence__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Presence__c</fullName>
    <label>Competitor Presence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>