Custom--app/main/default/objects/Listing__c/fields/Craig_List_Post__c.field-meta.xml
<CustomField>
    <fullName>Craig_List_Post__c</fullName>
    <label>Craig's List Post</label>
    <type>Date</type>
</CustomField>