Custom--app/main/default/objects/Listing__c/fields/Craig_s_List_Comments__c.field-meta.xml
<CustomField>
    <fullName>Craig_s_List_Comments__c</fullName>
    <label>Craig's List Comments</label>
    <type>TextArea</type>
</CustomField>