Custom--app/main/default/objects/Listing__c/fields/Craig_s_List_Description__c.field-meta.xml
<CustomField>
    <fullName>Craig_s_List_Description__c</fullName>
    <label>Craig's List Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>