Custom--app/main/default/objects/Listing__c/fields/Craig_s_List_Listing_2__c.field-meta.xml
<CustomField>
    <fullName>Craig_s_List_Listing_2__c</fullName>
    <label>Craig's List Listing #2</label>
    <type>Url</type>
</CustomField>