Custom--app/main/default/objects/Listing__c/fields/Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Cross_Streets__c</fullName>
    <formula>Portfolio__r.Property_Cross_Streets__c</formula>
    <label>Cross Streets</label>
    <type>Text</type>
</CustomField>