Custom--app/main/default/objects/Listing__c/fields/Curb_to_Kitchen__c.field-meta.xml
<CustomField>
    <fullName>Curb_to_Kitchen__c</fullName>
    <label>Curb to Kitchen</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>