Custom--app/main/default/objects/Listing__c/fields/Data_Check_Rehab_Listing_Match__c.field-meta.xml
<CustomField>
    <fullName>Data_Check_Rehab_Listing_Match__c</fullName>
    <formula>IF (ISBLANK(Data_Check_Rehab_s_Listing__c) = TRUE, "Blank",
 IF (Id = Data_Check_Rehab_s_Listing__c , "True", 
IF (Id  &lt;>  Data_Check_Rehab_s_Listing__c ,"False",NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Check - Rehab Listing Match</label>
    <type>Text</type>
</CustomField>