Custom--app/main/default/objects/Listing__c/fields/Data_Check_Rehab_s_Listing__c.field-meta.xml
<CustomField>
    <fullName>Data_Check_Rehab_s_Listing__c</fullName>
    <formula>Rehab__r.Listing__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Check_Rehab's Listing</label>
    <type>Text</type>
</CustomField>