Custom--app/main/default/objects/Listing__c/fields/Date_HOA_Security_Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_HOA_Security_Deposit_Received__c</fullName>
    <inlineHelpText>This date also appears on the associated AppTrack record as a formula.  It is editable only on Listing.</inlineHelpText>
    <label>Date HOA Security Deposit Received</label>
    <type>Date</type>
</CustomField>