Custom--app/main/default/objects/Listing__c/fields/Date_Leased__c.field-meta.xml
<CustomField>
    <fullName>Date_Leased__c</fullName>
    <label>Date Leased</label>
    <type>Date</type>
</CustomField>