Custom--app/main/default/objects/Listing__c/fields/Date_MAR_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_MAR_Completed__c</fullName>
    <label>Date MAR Completed</label>
    <type>Date</type>
</CustomField>