Custom--app/main/default/objects/Listing__c/fields/Date_MAR_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_MAR_Reviewed__c</fullName>
    <label>Date MAR Reviewed</label>
    <type>Date</type>
</CustomField>