Custom--app/main/default/objects/Listing__c/fields/Date_Time_Notified__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Notified__c</fullName>
    <description>This will be auto-populated when the Send to Listing Agent field is checked.</description>
    <inlineHelpText>This will be auto-populated when the Send to Listing Agent field is checked.</inlineHelpText>
    <label>Date/Time Notified</label>
    <type>DateTime</type>
</CustomField>