Custom--app/main/default/objects/Listing__c/fields/Days_from_Move_Out_to_Office_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Move_Out_to_Office_Sign_Off__c</fullName>
    <label>Days from Move Out to Office Sign Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>