Custom--app/main/default/objects/Listing__c/fields/Days_Lease_Execute_to_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Lease_Execute_to_Start__c</fullName>
    <formula>Lease_Start_Date__c  - Lease_Executed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Lease Execute to Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>