Custom--app/main/default/objects/Listing__c/fields/Days_Pre_leased__c.field-meta.xml
<CustomField>
    <fullName>Days_Pre_leased__c</fullName>
    <formula>IF (
	AND (
		NOT(ISPICKVAL(Status__c, "")),
		ISPICKVAL(Status__c, "Leased")
	),
	IF (
		(Rent_Ready_Date__c - App_Received_Date__c) &lt; 0,
		null,
		Rent_Ready_Date__c - App_Received_Date__c
	),
	null
)</formula>
    <label># Days Prelease App Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>