Custom--app/main/default/objects/Listing__c/fields/Days_Rent_Ready_to_Leased__c.field-meta.xml
<CustomField>
    <fullName>Days_Rent_Ready_to_Leased__c</fullName>
    <formula>Date_Leased__c - Rent_Ready_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Rent Ready to Leased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>