Custom--app/main/default/objects/Listing__c/fields/Days_Rent_Ready_to_Move_In__c.field-meta.xml
<CustomField>
    <fullName>Days_Rent_Ready_to_Move_In__c</fullName>
    <formula>Actual_AppTrack__r.Actual_Move_in_Date__c  - Rent_Ready_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Rent Ready to Move-In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>